# TOP_Academy_FastAPI

./: main.py  pyproject.toml
