[tool.poetry]
name = "top-academy-fastapi"
version = "0.1.0"
description = ""
authors = ["AspirantDrago <sanekclubstr@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
poetry-core = "^2.1.3"
uvicorn = "^0.34.2"
faker = "^37.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
